--- a/src/app/features/contact/contact-page/contact-page.html
+++ b/src/app/features/contact/contact-page/contact-page.html
@@ -26,7 +26,7 @@
 
           <div>
             <p class="text-xs uppercase tracking-widest text-gray-500 mb-1">DM</p>
-            <a href="https://www.instagram.com/celissa.mx/" target="_blank"
+            <a href="https://www.instagram.com/csierraphotography/" target="_blank"
               class="text-lg font-medium underline underline-offset-4 decoration-gray-400 hover:decoration-neutral-900 hover:text-neutral-900 transition">
               Instagram
             </a>
@@ -195,7 +195,7 @@
 
         <div class="text-center pt-2">
           <button type="submit" [disabled]="contactForm.invalid"
-            class="bg-cloud text-moonlight border border-gray-400 gap-2 items-center cursor-pointer px-6 py-2 text-base inline-flex items-center justify-center font-sans tracking-wide rounded-full transition-colors duration-300 hover:bg-blue hover:text-white focus:outline-none disabled:cursor-not-allowed disabled:opacity-50">
+            class="bg-cloud text-moonlight border border-gray-400 gap-2 items-center cursor-pointer px-6 py-2 text-base inline-flex items-center justify-center font-sans tracking-wide rounded-full transition-colors duration-300 hover:bg-gray-900 hover:text-white focus:outline-none disabled:cursor-not-allowed disabled:opacity-50">
             Send Message
           </button>
         </div>
