--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -1,7 +1,6 @@
 <footer class="w-full bg-cloud text-on-surface mt-auto">
     <div class="title-tabs max-w-6xl mx-auto px-4 py-10 grid grid-cols-1 md:grid-cols-3 gap-8">
-
-        <div>
+        <div class="text-center md:text-start">
             <h4 class="font-semibold mb-3">NAVIGATION</h4>
             <ul class="space-y-1">
                 <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue"><a
@@ -9,14 +8,14 @@
                 <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue"><a
                         routerLink="/portfolio">PORTFOLIO</a></li>
                 <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue"><a
-                        routerLink="/booking">BOOKING</a></li>
+                        routerLink="/contact">CONTACT</a></li>
             </ul>
         </div>
 
-        <div>
-            <h4 class="font-semibold text-center mb-3">FOLLOW US</h4>
+        <div class="text-center">
+            <h4 class="font-semibold mb-3">FOLLOW US</h4>
             <div class="flex items-center justify-center gap-4">
-                <a href="#" aria-label="Instagram" class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
+                <a href="https://www.instagram.com/csierraphotography/" target="_blank" aria-label="Instagram" class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
                     <fa-icon [icon]="faInstagram" />
                 </a>
                 <a href="#" aria-label="Pinterest" class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
@@ -25,7 +24,7 @@
             </div>
         </div>
 
-        <div class="text-end">
+        <div class="text-center md:text-end">
             <h4 class="font-semibold mb-3">LEGAL</h4>
             <ul class="title-tabs space-y-1">
                 <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue"><a
