--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,12 +1,9 @@
 <nav class="bg-white shadow-xs px-4 py-6 flex items-center justify-between">
     <!-- Desktop Menu -->
-    <div class="hidden md:flex items-center justify-center text-blue text-sm">
-        <a href="https://www.instagram.com/csierraphotography/" target="_blank" aria-label="Instagram">
-            <fa-icon [icon]="faInstagram"
-                class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-blue-mid hover:scale-105"></fa-icon>
+    <div class="hidden md:flex cursor-pointer transition-all duration-200 ease-in-out hover:scale-105">
+        <a routerLink="/">
+            <img class="h-14" src="assets/logo-prov3.png" alt="Celeste Sierra logo">
         </a>
-        <fa-icon [icon]="faPinterestP"
-            class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-blue-mid hover:scale-105"></fa-icon>
     </div>
 
     <ul class="hidden md:flex gap-8 items-center justify-between title-tabs">
@@ -17,14 +14,9 @@
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/details">DETAILS</a>
         </li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:scale-105">
-            <a routerLink="/">
-                <img src="assets/prov-logo.svg" alt="Celeste Sierra logo">
-            </a>
-        </li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
+        <!-- <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/booking">BOOKING</a>
-        </li>
+        </li> -->
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/about">ABOUT</a>
         </li>
@@ -33,10 +25,19 @@
         </li>
     </ul>
 
-    <button [matMenuTriggerFor]="langmenu" class="flex items-center justify-center text-blue text-sm"
+    <div class="hidden md:flex items-center justify-center text-gray-900 text-sm">
+        <a href="https://www.instagram.com/csierraphotography/" target="_blank" aria-label="Instagram">
+            <fa-icon [icon]="faInstagram"
+                class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"></fa-icon>
+        </a>
+        <fa-icon [icon]="faPinterestP"
+            class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"></fa-icon>
+    </div>
+
+    <!-- <button [matMenuTriggerFor]="langmenu" class="flex items-center justify-center text-blue text-sm"
         aria-label="Language icon">
         <fa-icon [icon]="faGlobe"
-            class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-blue-mid hover:scale-105"></fa-icon>
+            class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"></fa-icon>
     </button>
     <mat-menu #langmenu="matMenu">
         <button mat-menu-item>
@@ -49,17 +50,11 @@
                 <input class="mr-2 accent-blue" type="radio" name="lang" value="en"> English
             </label>
         </button>
+    </mat-menu> -->
 
-        <!-- <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
-                [(ngModel)]="language">
-                @for (lang of langs; track lang) {
-                <mat-radio-button class="example-radio-button uppercase" [value]="lang">{{lang}}</mat-radio-button>
-                }
-            </mat-radio-group> -->
-    </mat-menu>
-
+    <!-- Mobile Logo -->
     <a routerLink="/" class="flex md:hidden cursor-pointer transition-all duration-200 ease-in-out hover:scale-105">
-        <img src="assets/prov-logo.svg" alt="Celeste Sierra logo">
+        <img class="h-14" src="assets/logo-prov3.png" alt="Celeste Sierra logo">
     </a>
 
     <!-- Mobile Menu Button -->
@@ -81,10 +76,7 @@
         <a routerLink="/" (click)="closeMenu()">HOME</a>
         <a routerLink="/portfolio" (click)="closeMenu()">PORTFOLIO</a>
         <a routerLink="/about" (click)="closeMenu()">ABOUT</a>
-        <a routerLink="/" (click)="closeMenu()">
-            <img src="./../../../assets/prov-logo.svg" alt="Celeste Sierra logo">
-        </a>
-        <a routerLink="/booking" (click)="closeMenu()">BOOKING</a>
+        <!-- <a routerLink="/booking" (click)="closeMenu()">BOOKING</a> -->
         <a routerLink="/details" (click)="closeMenu()">DETAILS</a>
         <a routerLink="/contact" (click)="closeMenu()">CONTACT</a>
 
