--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -2,33 +2,34 @@
     <img src="assets/hero-4.jpg" alt="Hero cover"
         class="absolute inset-0 w-full h-full object-cover object-center  animate-fade-in -z-10">
 
-     <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/10 to-transparent"></div>
+    <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/10 to-transparent"></div>
 
-  <div class="relative z-10 flex flex-col justify-center h-full text-white uppercase px-6 md:px-20 animate-slide-up">
-    <h1 class="font-serif text-5xl md:text-6xl leading-tight tracking-wide">
-      <span class="block mb-4">Artistry</span>
-      <span class="block mb-4">Skill &</span>
-      <span class="block mb-8">Soul</span>
-    </h1>
-    <a routerLink="/booking"
-       class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-blue">
-      Book your date today
-    </a>
-  </div>
+    <div
+        class="relative md:w-120 z-10 flex flex-col justify-center h-full text-white uppercase px-6 md:px-20 animate-slide-up">
+        <h1 class="font-serif text-5xl md:text-6xl leading-tight tracking-wide">
+            <span class="block mb-4">Artistry</span>
+            <span class="block mb-4">Skill &</span>
+            <span class="block mb-8">Soul</span>
+        </h1>
+        <a routerLink="/contact"
+            class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-gray-900">
+            Book your date today
+        </a>
+    </div>
 </section>
 
 <section class="portfolio py-10 mb-6">
     <div class="max-w-6xl mx-auto px-6">
         <div class="mb-12 text-left md:text-center">
-            <h1 class="text-center uppercase mt-1 mb-6">Portfolio</h1>
-            <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">
-                From intimate weddings to editorial portraits &#8212; explore a curated selection of my work
+            <h1 class="text-center uppercase mt-1 mb-4">Portfolio</h1>
+            <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6 animate-fade-slide-up">
+                From intimate weddings to worldwide travels &#8212; explore a curated selection of my work
             </h2>
         </div>
 
-        <div class="container grid md:grid-cols-3 gap-1 px-4 mx-auto mb-12">
+        <div class="container grid md:grid-cols-3 gap-1 h-96 mx-auto mb-12">
             @for (type of serviceType; track $index) {
-            <div [routerLink]="type.link"
+            <div [routerLink]="type.path"
                 class="relative group flex items-center justify-center overflow-hidden cursor-pointer shadow-md">
 
                 <img [src]="type.image" [alt]="type.title"
@@ -48,18 +49,27 @@
         </div>
     </div>
 
+    <app-buttons routerLink="/portfolio" class="flex justify-center" variant="outline" color="neutral" size="md">
+        View Full Portfolio
+    </app-buttons>
+</section>
+
+<section id="portfoliCollage">
+    <div class="my-12 text-left md:text-center">
+        <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6 animate-fade-slide-up">
+            I little glimpse into my work
+        </h2>
+    </div>
+
     <div class="columns-2 md:columns-3 lg:columns-4 gap-1 p-1 my-12">
         @for (item of portfolioGrid; track $index) {
         <img [src]="item" class="mb-1 w-full">
         }
     </div>
-
-    <app-buttons routerLink="/portfolio" class="flex justify-center" variant="outline" color="neutral" size="md">View
-        Portfolio</app-buttons>
 </section>
 
 <!-- <section class="booking py-10 mb-6">
-    <h1 class="text-center uppercase mt-1 mb-6">Booking</h1>
+    <h1 class="text-center uppercase mt-1 mb-4">Booking</h1>
     <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">Book the Experience</h2>
     <div class="md:flex justify-center items-stretch gap-8 h-126 p-6">
         <div class="md:flex gap-2">
@@ -110,12 +120,14 @@
 </section> -->
 
 <section class="details py-10 mb-6">
-    <h1 class="text-center uppercase mt-1 mb-6">Details</h1>
-    <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">Browse our packages <br> to find your
-        perfect match</h2>
+    <h1 class="text-center uppercase mt-1 mb-4">Details</h1>
+    <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">
+        Here's a breakdown of everything you may want to know
+    </h2>
     <div class="flex flex-col md:flex-row justify-center items-stretch gap-6 p-6">
         @for (card of packageType; track $index) {
-        <div class="relative w-full md:w-80 aspect-[4/5] rounded-2xl overflow-hidden cursor-pointer group shadow-lg">
+        <div [routerLink]="card.path"
+            class="relative w-full md:w-80 aspect-[4/5] rounded-2xl overflow-hidden cursor-pointer group shadow-lg">
 
             <img [src]="card.image" alt="{{ card.title }}"
                 class="absolute inset-0 w-full h-full object-cover object-center transition-transform duration-700 group-hover:scale-110">
@@ -135,95 +147,116 @@
         </div>
         }
     </div>
+
+    <app-buttons routerLink="/details" class="flex justify-center" variant="outline" color="neutral" size="md">
+        Go to Details
+    </app-buttons>
 </section>
 
-<section class="about relative py-10 mb-6">
-    <h1 class="text-center uppercase mt-1 mb-6">About</h1>
-    <div class="max-w-4xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
-
+<section class="about relative py-16 md:py-24 bg-white">
+    <h1 class="text-center uppercase mt-1 mb-8">About</h1>
+    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
         <div>
-            <h2 class="font-serif font-light text-3xl md:text-4xl leading-snug mb-6">
-                I'm a wedding photographer based in Guadalajara, Mexico, available to capture memories worldwide.
+            <h2 class="font-serif font-light text-3xl md:text-4xl leading-snug mb-8 text-gray-900">
+                I'm a wedding photographer based in <span class="italic">Guadalajara, Mexico</span>
+                available to capture stories around the world
             </h2>
-            <p class="text-sm text-gray-600 mb-6">
-                With over six years of experience, I capture love stories with artistry, skill, and soul &#8212; from hometown
+
+            <p class="text-sm leading-relaxed text-gray-600 mb-8 max-w-md">
+                With over six years of experience, I capture love stories with artistry, skill, and soul &#8212; from
+                hometown
                 celebrations to unforgettable destination weddings. My natural, social approach helps every couple feel
                 at ease, creating timeless, candid memories to cherish for a lifetime.
-
             </p>
-            <app-buttons routerLink="/about" color="primary" size="md" variant="solid">
+
+            <app-buttons routerLink="/about" color="primary" size="md" variant="solid"
+                class="uppercase tracking-widest">
                 Meet Celeste
             </app-buttons>
         </div>
 
-        <div class="relative">
-            <div class="absolute -top-6 -left-6 w-32 h-32 bg-sand/20 rounded-full -z-10"></div>
-            <img src="assets/celeste-2.jpeg" alt="Celeste" class="rounded-3xl shadow-lg object-cover w-full h-auto">
+        <div class="grid grid-cols-2 gap-2 md:gap-3">
+            <img src="assets/celeste-4.jpeg" alt="Behind the scenes" class="object-cover w-full h-[280px] md:h-[340px]">
+            <img src="assets/celeste-2.jpeg" alt="Celeste working"
+                class="object-cover w-full h-[180px] md:h-[240px] mt-8">
+            <img src="assets/celeste-3.jpeg" alt="Portrait of Celeste"
+                class="object-cover w-full h-[340px] md:h-[400px] col-span-2">
         </div>
     </div>
 </section>
 
 <section class="contact text-center py-10 mb-6">
     <h1 class="uppercase mt-1 mb-6">Contact</h1>
-    <h2 class="font-serif font-light text-2xl md:text-3xl text-center">Let's do this!</h2>
-    <p class="mb-8">We would love to hear about you and your event</p>
-    <app-buttons routerLink="/contact" color="primary" size="md" variant="solid">Inquire</app-buttons>
+    <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">Let's do this!</h2>
+    <p class="mb-8 text-sm">We would love to hear about you and your event</p>
+    <app-buttons routerLink="/contact" color="neutral" size="lg" variant="outline">Inquire</app-buttons>
 </section>
 
 <section class="testimonials py-10 mb-6">
     <h1 class="uppercase text-center mt-1 mb-6">What they say</h1>
     <h2 class="font-serif font-light mb-6 text-2xl md:text-3xl text-center">Words from our clients</h2>
-    <div class="container grid md:grid-cols-3 gap-4 max-w-6xl mx-auto">
+
+    <div class="container grid md:grid-cols-3 gap-4 max-w-6xl mx-auto px-6">
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
+            <img src="assets/clients-7.jpg" class="w-24 h-24 object-cover object-bottom rounded-full"
                 alt="Celeste and Charles wedding photo">
-            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
+            <p class="font-serif text-lg font-bold mt-4">Larissa & Bryan</p>
             <p class="text-center text-gray-600 mt-2">
-                If you're not using testimonials, you're missing out on a golden opportunity
-                to turn visitors and potential buyers into actual customers.
+                Thank you so much, Celeste! We saw all the photos yesterday and loved them 🥹 Remembering is living
+                again!
             </p>
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
-        <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/clients-1.jpg" class="w-24 h-24 object-cover rounded-full"
-                alt="Celeste and Charles wedding photo">
-            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
-            <p class="text-center text-gray-600 mt-2">
-                If you're not using testimonials, you're missing out on a golden opportunity
-                to turn visitors and potential buyers into actual customers.
-            </p>
-            <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
-        </article>
-        <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/clients-4.jpg" class="w-24 h-24 object-cover rounded-full"
-                alt="Celeste and Charles wedding photo">
-            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
-            <p class="text-center text-gray-600 mt-2">
-                If you're not using testimonials, you're missing out on a golden opportunity
-                to turn visitors and potential buyers into actual customers.
-            </p>
-            <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
-        </article>
+
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
             <img src="assets/clients-3.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
-            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
+            <p class="font-serif text-lg font-bold mt-4">Gaby & Andrés</p>
             <p class="text-center text-gray-600 mt-2">
-                If you're not using testimonials, you're missing out on a golden opportunity
-                to turn visitors and potential buyers into actual customers.
+                THEY'RE ARE SO BEAUTIFUL!!! 🥹🤍🥹🥹🤍🤍 Woooow!!! We really can't stop smiling when we see each and
+                every
+                one of the photos. Thank you, thank you, thank you for capturing such special moments for us. We also
+                loved the editing and how natural the photos look, very timeless. As we told you a few days ago, we
+                clicked a lot with you and you made us feel very confident and relaxed at all times. Your art is
+                impressive 🙌🏼 you are awesome!!! Thank you so much for everything!!! ✨
             </p>
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
+
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/hor-5.jpg" class="w-24 h-24 object-cover rounded-full"
+            <img src="assets/clients-6.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
-            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
+            <p class="font-serif text-lg font-bold mt-4">Noemi & Oscar</p>
             <p class="text-center text-gray-600 mt-2">
-                If you're not using testimonials, you're missing out on a golden opportunity
-                to turn visitors and potential buyers into actual customers.
+                The video and photos were incredible! Thank you to the team for such an amazing service. We will
+                treasure these memories forever.
             </p>
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
+
+        <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
+            <img src="assets/clients-8.jpg" class="w-24 h-24 object-cover rounded-full"
+                alt="Celeste and Charles wedding photo">
+            <p class="font-serif text-lg font-bold mt-4">Sofía & Tristán</p>
+            <p class="text-center text-gray-600 mt-2">
+                We loved the photos!! Thank you so much!!
+            </p>
+            <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
+        </article>
+
+        <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
+            <img src="assets/clients-9.jpg" class="w-24 h-24 object-cover rounded-full"
+                alt="Celeste and Charles wedding photo">
+            <p class="font-serif text-lg font-bold mt-4">Reem & Cris</p>
+            <p class="text-center text-gray-600 mt-2">
+                You guys did an amazing job! Im so happy we had you for our wedding.
+                Im going to cherish our pictures and videos forever
+                Im crying everything is so beautiful 🥹
+                I LOVE THE PICTURES 😭
+            </p>
+            <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
+        </article>
+
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
             <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
