--- a/src/app/shared/scroll-top/scroll-top.html
+++ b/src/app/shared/scroll-top/scroll-top.html
@@ -1,6 +1,6 @@
 @if (showButton) {
 <button (click)="scrollToTop()"
-    class="cursor-pointer flex items-center justify-center fixed bottom-6 right-6 p-3 h-10 w-10 rounded-full border-2 text-xs hover:bg-blue hover:text-white hover:border-0 transition">
+    class="cursor-pointer flex items-center justify-center fixed bottom-6 right-6 p-3 h-12 w-12 rounded-full border-2 text-xs hover:bg-gray-900 hover:text-white hover:border-0 transition">
     <fa-icon [icon]="faArrow"></fa-icon>
 </button>
 }
